Criando a pagina docx

--- a/component/menu/menu.tpl.html
+++ b/component/menu/menu.tpl.html
@@ -13,7 +13,7 @@
 								<ul>
 									<li><router-link class="active" :to="{name:'pdf'}">PDF</router-link></li>
 									<li><router-link class="active" :to="{name:'html'}">Html</router-link></li>
-									<li><a href="#test3">Doc(x)</a></li>
+									<li><router-link class="active" :to="{name:'docx'}">Doc(x)</router-link></li>
 									<li>
 										<a class="dropdown-trigger" href="#test4" data-target="dropdown50" data-beloworigin="true">
 											<i class="ace-icon fa fa-caret-down right"></i>
@@ -51,11 +51,11 @@
 			</div>
 		</div>
 
-		<div class="nav-content container">
+		<!-- <div class="nav-content container">
 			<ul>
 				<li class="btn"><router-link class="active" :to="{name:'pdf'}">PDF</router-link></li>
 				<li class="btn"><router-link class="active" :to="{name:'html'}">Html</router-link></li>
-				<li class="btn"><a href="#test3">Doc(x)</a></li>
+				<li class="btn"><router-link class="active" :to="{name:'docx'}">Doc(x)</router-link></li>
 				<li class="btn">
 					<a class="dropdown-trigger" href="#test4" data-target="dropdown50" data-beloworigin="true">
 						<i class="ace-icon fa fa-caret-down right"></i>
@@ -71,7 +71,7 @@
 					</ul>
 				</li>
 			</ul>
-		</div>
+		</div> -->
 		<div id="dropdown-menu" ref="dropdown-menu"></div>
 	</nav>
 </div>
