--- a/component/menu/menu.tpl.html
+++ b/component/menu/menu.tpl.html
@@ -3,7 +3,7 @@
 		<div class="nav-wrapper container">
 			<div class="row">
 				<div class="col s4">
-					<a href="#" class="brand-logo left"><i class="fas fa-book-reader"></i>{{titulo}}</a>
+					<router-link :to="{name:'wdi-home'}" class="brand-logo left"><i class="fas fa-book-reader"></i>{{titulo}}</router-link>
 				</div>
 				<div class="col s8">
 					<div class="row">
